@@ -9,7 +9,6 @@ package at.wrk.fmd.geobroker.util;
 import at.wrk.fmd.geobroker.contract.generic.OneTimeAction;
 import at.wrk.fmd.geobroker.contract.generic.Point;
 import at.wrk.fmd.geobroker.contract.unit.ConfiguredUnit;
-import com.google.common.collect.ImmutableList;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.RandomUtils;
 
@@ -23,17 +22,17 @@ public final class ConfiguredUnits {
         return randomUnit(
                 unitId,
                 token,
-                ImmutableList.of("referenced unit 1 " + randomAlphabetic(), "referenced unit 2 " + randomAlphabetic()));
+                List.of("referenced unit 1 " + randomAlphabetic(), "referenced unit 2 " + randomAlphabetic()));
     }
 
     public static ConfiguredUnit randomUnit(final String unitId, final String token, final List<String> referencedUnitIds) {
         return ConfiguredUnit.builder(unitId, "Display Name " + randomAlphabetic(), token)
                 .withUnits(referencedUnitIds)
-                .withIncidents(ImmutableList.of("referenced incident 1 " + randomAlphabetic(), "referenced incident 2 " + randomAlphabetic()))
-                .withLastPoint(new Point(123d, RandomUtils.nextDouble(0, 90)))
-                .withTargetPoint(new Point(938d, RandomUtils.nextDouble(0, 90)))
-                .withAvailableForDispatching(RandomUtils.nextBoolean())
-                .withAvailableOneTimeActions(ImmutableList.of(randomOneTimeAction()))
+                .withIncidents(List.of("referenced incident 1 " + randomAlphabetic(), "referenced incident 2 " + randomAlphabetic()))
+                .withLastPoint(new Point(123d, RandomUtils.insecure().randomDouble(0, 90)))
+                .withTargetPoint(new Point(938d, RandomUtils.insecure().randomDouble(0, 90)))
+                .withAvailableForDispatching(RandomUtils.insecure().randomBoolean())
+                .withAvailableOneTimeActions(List.of(randomOneTimeAction()))
                 .build();
     }
 
@@ -42,10 +41,10 @@ public final class ConfiguredUnits {
                 "integrationTestOTA",
                 "https://invalid.local/integrationTest/42",
                 null,
-                RandomStringUtils.randomAlphabetic(10));
+                RandomStringUtils.insecure().nextAlphabetic(10));
     }
 
     private static String randomAlphabetic() {
-        return RandomStringUtils.randomAlphabetic(10);
+        return RandomStringUtils.insecure().nextAlphabetic(10);
     }
 }
